Fixes sizing on mobile

--- a/2.0/contact.css
+++ b/2.0/contact.css
@@ -4,16 +4,6 @@
     padding: 0;
 }
 
-html 
-{
-    scroll-behavior: smooth;
-}
-
-head
-{
-    
-}
-
 body 
 {
     background-color: #252627 !important;
@@ -59,9 +49,10 @@ body
     background: #181818;
 }
 
-.navbar-toggler
+.navbar-toggler 
 {
-    border: none !important;
+    border-color: black !important;
+    background: #707070 !important;
 }
 
 .nav-link 
@@ -77,6 +68,19 @@ body
     border-color: #555 !important;
 }
 
+.btn:hover
+{
+    color: lightslategray !important;
+    background-color: darkslategrey !important;
+}
+
+.form-control
+{
+    background-color: #252627 !important;
+    border-color: #252627 !important;
+}
+
+
 .contact h1
 {
     text-align: center;
@@ -88,16 +92,15 @@ body
     margin-top: 50px;
 }
 
-form input,
-form textarea
+.contact input,
+.contact form textarea
 {
     display: block;
-    width: 500px;
+    max-width: 500px;
     padding: 20px;
     background-color: #252627;
     border: 3px solid #707070;
-    margin: 20px 0;
-    outline: none;
+    margin: 35px 0;
     font-size: 1.2rem;
     color: #fff;
     position: relative;
